#254: simplifications, OrganizationMinified as Domain object, moved logic to application core